<resources>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">मुझे कुछ बताओ</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_name">Veeville.Farm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_mark">\?</string>
    <string name="type_a_message">Type a message</string>
    <string name="cerebro">Cerebro</string>
    <string name="work_flow">Work Flow</string>
    <string name="_1_pending_activity">1 pending activity</string>
    <string name="soil_ph">Soil pH</string>
    <string name="absolute_71_nrelative_73">Absolute 71% Relative 73%</string>
    <string name="soil_temp">Soil Temp</string>
    <string name="_28_x2103_cloudy">28℃ Cloudy</string>
    <string name="light">Light</string>
    <string name="_1075_lux">1075 lux</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="base_soil_45_ndeep_soil_65">Base Soil 45% Deep Soil 65%</string>
    <string name="veeville_u00a9_2018">Veeville © 2018</string>
    <string name="textview">TextView</string>
    <string name="repeat_daily">Repeat daily</string>
    <string name="set">Set</string>
    <string name="channel_name">notifiation channel VeeFarm</string>
    <string name="channel_description">veefarm channel description</string>
    <string name="fruits">Fruits</string>
    <string name="ip_address_ofsensg">Ip address ofSensG</string>
    <string name="submit">Submit</string>
    <string name="gallery">Vqa</string>
    <string name="weed">Weed</string>
    <string name="disease">Disease</string>
    <string name="server_client_id">689443953968-7snv060pq4orh1g2oan6htmb436n53h9.apps.googleusercontent.com</string>
    <string name="today_1">TODAY</string>
    <string name="absolute_humidity">Absolute Humidity</string>
    <string name="_71">71%</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="_73">73%</string>
    <string name="g_m3">g/m3</string>
    <string name="absolute">Absolute</string>
    <string name="percentage">lux</string>
    <string name="relative">Relative</string>
    <string name="todo">TODO</string>
    <string name="your_string_here"><u>ph Scale</u>.</string>
    <string name="humidity">Humidity</string>
    <string name="_69_soil_level_n70_1_m_above_soil_level">69% soil level 70% 1 m above Soil level</string>
    <string name="_6am">6am</string>
    <string name="_100">100</string>
    <string name="_50">50</string>
    <string name="current_reading">Current Reading</string>
    <string name="_1075">1075</string>
    <string name="_32">32</string>
    <string name="_today">TODAY</string>
    <string name="bengaluru_friday_1_00_pm">Bengaluru</string>
    <string name="lx">Lx</string>
    <string name="today">Today</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="sdfsdfsd">sdfsdfsd</string>
    <string name="rfgdgdgdfgdfgfdg">rfgdgdgdfgdfgfdg</string>
    <string name="response_message">response message</string>
    <string name="dsfsfsf">dsfsfsf</string>
    <string name="ksdjaskjdkjdhdjkajdhkadhkadad">ksdjaskjdkjdhdjkAJDHkadhkADad</string>
    <string name="title">title</string>
    <string name="today_last">TODAY</string>
    <string name="base_soil">Base Soil</string>
    <string name="_45">45%</string>
    <string name="_65">65%</string>
    <string name="base_soil_new">Base soil</string>
    <string name="m">M</string>
    <string name="deep_soil">Deep Soil</string>
    <string name="today_new">TODAY</string>
    <string name="last_recorded_value">Last Recorded Value</string>
    <string name="_6_1">6.1</string>
    <string name="ph">pH</string>
    <string name="last_recorded_temperature">Last Recorded Temperature</string>
    <string name="_27_x2103">27℃</string>
    <string name="temp">Temp</string>
    <string name="temp_c">Temp C</string>
    <string name="c">C</string>
    <string name="_11_am">11 am</string>
    <string name="_28">28</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="precipitation_104">Precipitation</string>
    <string name="humidity_72">Humidity</string>
    <string name="wind_speed_25kmph">Wind Speed(kmph)</string>
    <string name="time">Time</string>
    <string name="t_x2103">T ℃</string>
    <string name="weather">Weather</string>
    <string name="_03">03</string>
    <string name="_25">25</string>
    <string name="things_to_do">things to do</string>
    <string name="hi_this_isexplanation_about_work_pending_isexplanation_about_work_pending_isexplanation_about_work_pending_isexplanation_about_work_pending">hi this isexplanation about work pending isexplanation about work pending isexplanation about work pending isexplanation about work pending</string>
    <string name="_03_jul_2018">03 jul 2018</string>
    <string name="h">H</string>
    <string name="bar">bar</string>
    <string name="name">Name</string>
    <string name="price_u20b9">Price ₹</string>
    <string name="u20b9">₹</string>
    <string name="chennai">Chennai</string>
    <string name="title_activity_farmers_farm">Map</string>
    <string name="title_activity_profile_scroll">ProfileScroll</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>