<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11_am"
        android:layout_weight="1"
        android:layout_gravity="center"

        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:src="@drawable/sunlight_icon"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_28"
        android:layout_gravity="center"

        />
</LinearLayout>