<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:id="@+id/weather_card"
    app:cardBackgroundColor="@color/white"
    android:layout_marginBottom="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:id="@+id/date"
                    android:textSize="20sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bengaluru_friday_1_00_pm"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:id="@+id/place"
                    android:fontFamily="@font/raleway_medium"

                    />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cloudy_sunny_weather_icon"
                    android:adjustViewBounds="true"
                    android:id="@+id/weather_icon"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temperature"
                    android:text="@string/_27_x2103"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="right"
                tools:ignore="RtlHardcoded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation_104"
                    android:id="@+id/precipitation"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_72"
                    android:id="@+id/humidity"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed_25kmph"
                    android:id="@+id/wind_speed"
                    />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                android:paddingEnd="5dp"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/t_x2103"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview"
                >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>




</android.support.v7.widget.CardView>