<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_gravity="center"
    >
<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/image"
    android:contentDescription="@string/todo" />
  <EditText
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:id="@+id/edittext"
      android:theme="@style/EditTextTheme"

      android:inputType="text"
      tools:ignore="LabelFor" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:textAllCaps="false"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/send"
                android:id="@+id/send"
                android:textAllCaps="false"
                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>