<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    android:id="@+id/cardview"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/top_layout"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_03_jul_2018"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerview_to_do_things"
            >
        </android.support.v7.widget.RecyclerView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/todays_work_wheat_image"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/todo" />
    </LinearLayout>






</android.support.v7.widget.CardView>