<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="UselessParent">

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/ip_of_sensg"
            android:minWidth="150dp"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/ip_address_ofsensg"
            android:textSize="12sp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/shapes"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/submit"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/shapes_without_round"
                />
            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/shapes_without_round"
                />

        </LinearLayout>




    </LinearLayout>



</RelativeLayout>
